--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dotenvx/dotenvx": "^1.45.2",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
